# AFL-Technical-Test

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  database.py  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 4332f2d05a0d_add_contract_table.py  5096a74139f5_add_companies_table.py  ca5c8085accd_initial_migration.py  ce35524d2765_add_companies_table.py  d81312196e98_update_contract_model.py  ee356002ac99_add_user_table.py  efeec90ad545_user_migration.py  f76c296abbe3_allow_custom_services_selection_in_.py
src/: main.py
src/application/use_cases/: auth_use_case.py  company_use_case.py  contract_use_case.py  metrics_use_case.py
src/domain/entities/: company.py  contract.py  user.py
src/domain/interfaces/: i_company_repository.py  i_contract_repository.py  i_metrics_repository.py  i_user_repository.py
src/infrastructure/: auth.py  dependencies.py
src/infrastructure/repositories/: company_repository.py  contract_repository.py  metrics_repository.py  user_repository.py
src/interfaces/: schemas.py
src/interfaces/controllers/: auth_controller.py  company_controller.py  contract_controller.py  metrics_controller.py  protected_controller.py
src/interfaces/schemas/: company_schema.py  contract_schema.py  user_schema.py
src/tests/entities/: test_company.py  test_contract.py  test_user.py
src/tests/integration/: test_auth_routes.py  test_company_routes.py  test_contract_routes.py
